@@ -1,11 +1,40 @@
 %-600
 % -R7
--R95
+% -R95
 % -300
--b
-$line=o
+% -b
+% $line=o
 % a / is 47 
-$slur_depth=-6.0
+% $slur_depth=-6.0
+-CC
+
+b
+1 1
+bXQ
+1 2
+bQX
+1 3
+bL
+1 4
+bQ
+1 5
+bX
+1 6
+bQ
+1 7
+bL
+1 8
+b
+1 9
+b
+
+b
+1 c
+b
+1 c
+b
+e
+
 
 be
 0-a/
